# cmake-cpp-starter-kit

./: .gitmodules  CMakeLists.txt  README.md
.github/workflows/: CI.yml
include/: foo.h
proto/: CMakeLists.txt  myservice.proto
source/: foo.cc  main.cc
standalone/: main.cc
test/: CMakeLists.txt  foo_test.cc
